--- a/taskManager/app/src/main/java/view/JDialogTaskScreen.form
+++ b/taskManager/app/src/main/java/view/JDialogTaskScreen.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
@@ -23,14 +23,18 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanelNewProjectTitle" max="32767" attributes="0"/>
-          <Component id="jPanelNewTaskForm" alignment="0" max="32767" attributes="0"/>
+          <Component id="jPanelNewTaskTitle" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jPanelNewTaskForm" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="jPanelNewProjectTitle" min="-2" max="-2" attributes="0"/>
+              <Component id="jPanelNewTaskTitle" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Component id="jPanelNewTaskForm" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="44" max="32767" attributes="0"/>
@@ -39,7 +43,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="jPanelNewProjectTitle">
+    <Container class="javax.swing.JPanel" name="jPanelNewTaskTitle">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="66" red="0" type="rgb"/>
@@ -51,9 +55,9 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabelNewProjectTitle" max="32767" attributes="0"/>
+                  <Component id="jLabelNewTaskTitle" pref="532" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabelNewProjectCheck" min="-2" pref="50" max="-2" attributes="0"/>
+                  <Component id="jLabelNewTaskSave" min="-2" pref="50" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -63,8 +67,8 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabelNewProjectCheck" pref="59" max="32767" attributes="0"/>
-                      <Component id="jLabelNewProjectTitle" max="32767" attributes="0"/>
+                      <Component id="jLabelNewTaskSave" pref="59" max="32767" attributes="0"/>
+                      <Component id="jLabelNewTaskTitle" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -72,7 +76,7 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="jLabelNewProjectTitle">
+        <Component class="javax.swing.JLabel" name="jLabelNewTaskTitle">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="18" style="1"/>
@@ -83,7 +87,7 @@
             <Property name="text" type="java.lang.String" value="New Task"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabelNewProjectCheck">
+        <Component class="javax.swing.JLabel" name="jLabelNewTaskSave">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
@@ -111,7 +115,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jScrollPane2" pref="588" max="32767" attributes="0"/>
+                      <Component id="jScrollPaneNewTaskNote" pref="576" max="32767" attributes="0"/>
                       <Component id="jLabelNewTaskNote" alignment="1" max="32767" attributes="0"/>
                       <Component id="jLabelNewTaskDescriptionCab" alignment="1" max="32767" attributes="0"/>
                       <Component id="jTextFieldNewTaskName" alignment="1" max="32767" attributes="0"/>
@@ -119,7 +123,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jLabelNewTaskDeadline" min="-2" pref="68" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jTextFieldNewTaskDeadline" max="32767" attributes="0"/>
+                          <Component id="jFormattedTextNewTaskDeadline" max="32767" attributes="0"/>
                       </Group>
                       <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
                   </Group>
@@ -139,14 +143,14 @@
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="133" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jTextFieldNewTaskDeadline" max="32767" attributes="0"/>
-                      <Component id="jLabelNewTaskDeadline" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jLabelNewTaskDeadline" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
+                      <Component id="jFormattedTextNewTaskDeadline" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabelNewTaskNote" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="jScrollPane2" max="32767" attributes="0"/>
+                  <Component id="jScrollPaneNewTaskNote" max="32767" attributes="0"/>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -195,19 +199,19 @@
             </Component>
           </SubComponents>
         </Container>
+        <Component class="javax.swing.JFormattedTextField" name="jFormattedTextNewTaskDeadline">
+          <Properties>
+            <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
+              <Format subtype="1" type="1"/>
+            </Property>
+          </Properties>
+        </Component>
         <Component class="javax.swing.JLabel" name="jLabelNewTaskDeadline">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="DeadLine"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="jTextFieldNewTaskDeadline">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="14" style="0"/>
-            </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelNewTaskNote">
@@ -218,7 +222,7 @@
             <Property name="text" type="java.lang.String" value="Notes"/>
           </Properties>
         </Component>
-        <Container class="javax.swing.JScrollPane" name="jScrollPane2">
+        <Container class="javax.swing.JScrollPane" name="jScrollPaneNewTaskNote">
           <AuxValues>
             <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
           </AuxValues>
