--- a/taskManager/app/src/main/java/view/JDialogTaskScreen.form
+++ b/taskManager/app/src/main/java/view/JDialogTaskScreen.form
@@ -99,6 +99,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelNewTaskSaveMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
